@@ -6880,7 +6880,7 @@ genInline (const iCode *ic)
           ++bp;
           break;
 
-        case 0x87:
+        case '\x87':
         case '\n':
           inComment = FALSE;
           *bp++ = '\0';
